# BVSim

./: .gitignore  Beach Volleyball Point Simulator Specs_.md  DEVELOPMENT_LOG.md  IMPLEMENTATION_PLAN.md  PHASE4_COMPLETE.md  PHASE_2_DEMO_RESULTS.py  PHASE_5_COMPLETION.md  PROGRESS_SUMMARY.md  PROJECT_SUMMARY.md  README.md  WEEK_3_SUMMARY.md  dev.bat  dev.sh  docker-compose.yml  test_match_simulation.py  test_rally_endpoint.py
backend/: .env.example  Dockerfile  alembic.ini  docs_check.html  phase4_demo.py  phase4_summary.py  pyproject.toml  requirements.txt  test_monte_carlo.py  test_rally_engine.py
backend/alembic/: env.py
backend/alembic/versions/: 2025_07_10_1531-98c40ddc8b13_initial_migration.py
backend/src/bvsim/: __init__.py  main.py
backend/src/bvsim/api/: analytics.py  match.py  monte_carlo.py  rally.py
backend/src/bvsim/config/: database.py  settings.py
backend/src/bvsim/controllers/: __init__.py  analytics.py  simulation.py  teams.py
backend/src/bvsim/core/: database.py
backend/src/bvsim/engine/: __init__.py  advanced_analytics.py  match_simulator.py  monte_carlo.py  probability_engine.py  rally_simulator.py  rally_states.py
backend/src/bvsim/models/: __init__.py  database.py
backend/src/bvsim/schemas/: __init__.py  analytics.py  common.py  engine.py  match.py  simulation.py  team_statistics.py
backend/src/bvsim/utils/: __init__.py  logging.py
backend/tests/: test_advanced_analytics.py  test_analytics_api.py
frontend/: Dockerfile  index.html  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/charts/: AnalyticsCharts.tsx
frontend/src/components/dashboard/: AnalyticsDashboard.tsx
frontend/src/components/forms/: TeamInputForm.tsx
frontend/src/components/ui/: LoadingAndError.tsx  utils.ts
frontend/src/hooks/: useAnalytics.ts
frontend/src/services/: analyticsAPI.ts
frontend/src/stores/: analyticsStore.ts
frontend/src/types/: analytics.ts  env.d.ts
